--- a/nuevo/estilos/styles.css
+++ b/nuevo/estilos/styles.css
@@ -1,17 +1,3 @@
-h1{
-    color: red;
-}
-h2{
-    color:blue;
-}
-h3{
-    color:rgb(226, 43, 198);
-}
-
-table,td,tr{
-     border:1px solid blue;
-}
-
-button{
+.resultado{
     color: blue;
 }
